--- a/src/app/inbox/email-placeholder/email-placeholder.component.html
+++ b/src/app/inbox/email-placeholder/email-placeholder.component.html
@@ -1,1 +1,6 @@
-<p>email-placeholder works!</p>
+<div class="ui placeholder segment">
+    <div class="ui icon header">
+        <i class="icon envelope outline"></i>
+        Select an email to get started...
+    </div>
+</div>
