--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,1 +1,11 @@
-<p>email-show works!</p>
+<div class="header">
+    <div>
+        <h3>{{ email.subject }}</h3>
+        <div>
+            from: <i>{{ email.from }}</i>
+        </div>
+        <div>
+            to: <i>{{ email.to }}</i>
+        </div>
+    </div>
+</div>
