--- a/src/app/inbox/email-index/email-index.component.css
+++ b/src/app/inbox/email-index/email-index.component.css
@@ -13,3 +13,14 @@ a.active::before {
   font-size: 1rem;
   margin-right: .5rem;
 }
+
+.content {
+  width: 90%;
+}
+
+.trim{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+}
