--- a/src/app/inbox/email-index/email-index.component.html
+++ b/src/app/inbox/email-index/email-index.component.html
@@ -2,10 +2,10 @@
   <div *ngFor="let email of emails" class="item">
     <a routerLinkActive="active" [routerLink]="email.id">
       <div class="content">
-        <div class="header">
+        <div class="header trim">
           {{ email.subject }}
         </div>
-        <p>{{ email.from }}</p>
+        <p class="trim">{{ email.from }}</p>
       </div>
     </a>
   </div>
