--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,12 +1,24 @@
 <div class="field">
   <label for="">{{ label }}</label>
-  <input [type] ="inputType" [formControl]="control" type="text" />
+  <input
+    *ngIf="controlType === 'input'"
+    [type]="inputType"
+    [formControl]="control"
+    type="text"
+  />
+
+  <textarea
+    [formControl]="control"
+    *ngIf="controlType === 'textarea'"
+  ></textarea>
+
   <div *ngIf="showErrors()" class="ui pointing red basic label">
     <p *ngIf="control.errors.required">Value is required.</p>
     <p *ngIf="control.errors.minlength">
       Values entered is {{ control.errors.minlength.actualLength }} characters
       long, but it must be atleast {{ control.errors.minlength.requiredLength }}
     </p>
+    <p *ngIf="control.errors.email">Enter a valid email</p>
     <p *ngIf="control.errors.maxlength">
       Values entered is {{ control.errors.minlength.actualLength }} characters
       long, but it must be atleast {{ control.errors.maxlength.requiredLength }}
